--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.453.0"
+    "resend": "^6.9.1"
   },
   "devDependencies": {
+    "@types/node": "^25.2.0",
+    "@vercel/node": "^5.5.29",
     "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.1",
-    "tailwindcss": "^3.4.10",
-    "postcss": "^8.4.41",
     "autoprefixer": "^10.4.20",
-    "typescript": "^5.5.4"
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.1"
   }
 }
