--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "moduleResolution": "Bundler",
     "skipLibCheck": true
+    "types":[node]
   },
   "include": ["src"]
 }
