Fix tsconfig + add resend deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "moduleResolution": "Bundler",
     "skipLibCheck": true,
-    "types":[node]
+    "types":["node"]
   },
   "include": ["src"]
 }
